--- a/week1/dag3/opdracht6/index.html
+++ b/week1/dag3/opdracht6/index.html
@@ -15,10 +15,10 @@
             }
 
             const hetSpel = function(testGetal, randomGetal){
-                if (testGetal === randomGetal){
-                    alert('Winnaar');
+                if (testGetal === randomGetal){ 
+                    alert('Winnaar ' + testGetal + ' was je getal ' + randomGetal + '  is het getal dat ik had');
                 } else {
-                    alert ('Loser!!');
+                    alert ('Loser!! ' + testGetal + ' was je getal ' + randomGetal + '  is het getal dat ik had');
                 }
             }
 
